# handy

exiftool/: README.md  pyproject.toml  setup.py
exiftool/src/exiftool/: __init__.py  exiftool.py
