[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
authors = [
    {name = "Jeff Clough", email = "jeff@cloughcottage.com"},
]
description = "This package provides a fairly clumsy Python interface to Phil Harvey's most excellent exiftool command. At the moment, it supports only the ability to read EXIF tags from a given file. When I need to do more with EXIF (maybe adding or updating location data), I'll add that capability then."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/jeffclough/handy"
